--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,51 +1,38 @@
 {
   "env": {
-    "browser": true,
-    "es2021": true
+  "browser": true,
+  "es2020": true
   },
   "settings": {
-    "react": {
-      "version": "detect"
-    }
+  "react": {
+  "version": "detect"
+  }
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+  "eslint:recommended",
+  "plugin:react/recommended",
+  "plugin:@typescript-eslint/eslint-recommended",
+  "plugin:@typescript-eslint/recommended",
+  "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
+  "ecmaFeatures": {
+  "jsx": true
+  },
+  "ecmaVersion": 11,
+  "sourceType": "module"
   },
   "plugins": [
-    "react",
-    "@typescript-eslint"
+  "react",
+  "react-hooks",
+  "@typescript-eslint"
   ],
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "never"
-    ],
-    "react/prop-types": "off",
-    "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+  "react-hooks/rules-of-hooks": "error",
+  "react-hooks/exhaustive-deps": "warn",
+  "react/prop-types": "off",
+  "react/react-in-jsx-scope": "off",
+  "@typescript-eslint/explicit-module-boundary-types": "off"
   }
-}
+  }
