--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@typescript-eslint/parser": "^4.14.1",
     "babel-plugin-styled-components": "^1.8.0",
     "eslint": "^7.18.0",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-prettier": "3.3.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.0.7",
+    "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
     "typescript": "^4.1.3"
   },
