--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*": [
-      "yarn lint --fix"
-    ]
+    "src/**/*": ["yarn lint --fix"]
   },
   "dependencies": {
     "next": "latest",
