--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     }
   },
   "lint-staged": {
-    "src/**/*": ["yarn lint --fix"]
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
   },
   "dependencies": {
+    "@crello/react-lottie": "^0.0.11",
+    "framer-motion": "^3.3.0-beta.22",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
