--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
     "framer-motion": "^3.3.0-beta.22",
+    "json-server": "^0.16.3",
+    "lodash": "^4.17.20",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "styled-icons": "^10.27.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
