--- a/package.json
+++ b/package.json
@@ -1,49 +1,17 @@
 {
-  "name": "bts-quiz",
+  "name": "bts-quiz-api",
   "version": "1.0.0",
+  "description": "Simple json database to deploy to the host of your choice",
+  "main": "server.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint . --max-warnings=0"
+    "start": "node server.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*": [
-      "yarn lint --fix"
-    ]
-  },
+  "keywords": [
+    "json-server,heroku, node, REST API"
+  ],
+  "author": "Jesper Orb",
+  "license": "ISC",
   "dependencies": {
-    "@crello/react-lottie": "^0.0.11",
-    "framer-motion": "^3.3.0-beta.22",
-    "json-server": "^0.16.3",
-    "lodash": "^4.17.20",
-    "next": "latest",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-is": "^16.8.0",
-    "styled-components": "^5.0.0",
-    "styled-icons": "^10.27.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "babel-plugin-styled-components": "^1.8.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "prettier": "2.2.1",
-    "typescript": "^4.1.3"
-  },
-  "license": "MIT"
+    "json-server": "^0.16.3"
+  }
 }
